# cdasim

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.circleci/: config.yml
.github/workflows/: ci.yml  docker.yml  dockerhub.yml  runtest.yml  simulation.yml
.sonarqube/: sonar-scanner.properties
Instruction/: README.md
Instruction/Build Docker Image Instruction/: README.md
Instruction/Build MOSAIC Instruction/: README.md
carla-carma-integration/: Dockerfile  README.md  build-image.sh  run.sh
carla-carma-integration/carla-carma-agent/: CMakeLists.txt  package.xml
carla-carma-integration/carla-carma-agent/agent/: bridge.launch  my_agent.launch
carla-carma-integration/carla-carma-agent/agent/config/: sensors.json
carla-carma-integration/carla-carma-agent/agent/launch/: my_localization.launch
carla-carma-integration/carla-carma-agent/launch/: carla_autoware_agent.launch  carla_carma_agent.launch
carla-carma-integration/carla-carma-vehicle/: CMakeLists.txt  package.xml
carla-carma-integration/carla-carma-vehicle/include/: virtual_vehicle.h
carla-carma-integration/carla-carma-vehicle/launch/: carla-carma-vehicle.launch  carla_carma_vehicle.launch
carla-carma-integration/carla-carma-vehicle/src/: virtual_vehicle.cpp
carla-carma-integration/carla-carma-vehicle/test/: test_carla-carma-vehicle.py  test_carla-carma-vehicle.test
carla-carma-integration/carla_carma_bridge/: CMakeLists.txt  package.xml  setup.py
carla-carma-integration/carla_carma_bridge/config/: parameters.yaml  parameters.yml
carla-carma-integration/carla_carma_bridge/launch/: carla_carma_bridge.launch
carla-carma-integration/carla_carma_bridge/src/carla_carma_bridge/: carla_carma_robot_status  carla_to_autoware_vehicle_status  carla_to_carma_driver_status  carla_to_carma_external_objects  carla_to_carma_localization  carla_to_carma_route  carla_to_carma_twist  carla_to_carma_vehicle_status  carma_carla_driver_status  carma_carla_guidance  carma_carla_plugins  carma_carla_robot_status  carma_carla_route  carma_to_carla_ackermann_cmd  carma_to_carla_plugins  carma_to_carla_route
carla-carma-integration/msgs/autoware_msgs/: CMakeLists.txt  package.xml
carla_ackermann_control/: CMakeLists.txt  README.md  package.xml  setup.py
carla_ackermann_control/config/: AckermannControl.perspective  AckermannPlot.perspective  settings.yaml
carla_ackermann_control/launch/: carla_ackermann_control.launch
carla_ackermann_control/msg/: EgoVehicleControlInfo.msg
carla_ackermann_control_wrapper/: CMakeLists.txt  package.xml
carla_ackermann_control_wrapper/config/: parameters.yaml
carla_ackermann_control_wrapper/include/: carla_ackermann_control_wrapper.h  carla_ackermann_control_wrapper_worker.h  carla_control_physics.h
carla_ackermann_control_wrapper/launch/: calra_ackermann_control_wrapper.launch  carla_ackermann_control_wrapper.launch  carma_src.launch  environment.launch  guidance.launch
carla_ackermann_control_wrapper/src/: carla_ackermann_control_wrapper.cpp  carla_ackermann_control_wrapper_worker.cpp  carla_control_physics.cpp  main.cpp
carla_ackermann_control_wrapper/test/: test_carla_control_wrapper_worker.cpp
carla_carma/: CMakeLists.txt  package.xml  setup.py
carla_carma/launch/: carla_comm.launch  carma_carla_comm.launch  carma_comm.launch
carla_carma/msg/: CarlaEgoVehicleControl.msg  CarmaInit.msg  ExternalObject.msg  ExternalObjectList.msg  VehicleStatus.msg
carla_carma/src/: CARLA_server_interface.py  CARMA_client_interface.py
carla_carma/src/carla_carma/: CARLA_server_interface.py  CARMA_client_interface.py
carla_twist_to_control/: CMakeLists.txt  package.xml
carma-carla/: CARLA_client.py
carma-carla/carla-carma-agent/: CMakeLists.txt  package.xml
carma-carla/carla_carma_bridge/: CMakeLists.txt  package.xml  setup.py
carma-carla/carla_carma_bridge/launch/: carla_carma_bridge.launch
carma-carla/carla_carma_bridge/src/carla_carma_bridge/: carla_to_autoware_localization  carla_to_carma_external_objects
carma_messenger_vehicle_plugin/logs/: README
carma_messenger_vehicle_plugin/src/: move_over_law.py  msger_veh_cfg.py  msger_veh_wrapper.py  sumo_connector.py
carma_messenger_vehicle_plugin/test/: test_msger_veh_cfg.py  test_sumo_connector.py
co-simulation/: .gitignore  NOTICE-THIRD-PARTY.md  pom.xml
co-simulation tool/: .gitignore  .project  README.md  pom.xml
co-simulation tool/bridge/: bridge.bat  bridge.sh  carla_mosaic_bridge.py
co-simulation tool/bundle/: .project  pom.xml
co-simulation tool/docker/: Dockerfile  README.md
co-simulation/bridge/: carla_mosaic_bridge.py
co-simulation/bundle/: pom.xml
co-simulation/cpp-java-bridge/: compile.sh  run.sh
co-simulation/fed/mosaic-carla/src/main/c++/: .gitattributes  .gitignore  CMakeLists.txt  libcarla-jni.cpp  libcarla-test.cpp
co-simulation/fed/mosaic-carla/src/main/c++/include/: org_eclipse_mosaic_fed_carla_libcarla_CarlaClient.h
co-simulation/fed/mosaic-carla/src/main/c++/include/carla/: Version.h
co-simulation/patch/: connection.py  mosaic-node-manager.cc  ns3-federate.make  run.sh
co-simulation/tools/: geneate_background_traffic.sh  generate_background_traffic.sh
co-simulation/traci_update/: constants.py  main.py
docker/: build-image.sh  build.sh  checkout.sh  entrypoint.sh  env.sh  install.sh  install_dependencies.sh  run.sh
docs/: License.md  Release_notes.md  pull_request_template.md
evc-sumo/: Dockerfile
evc-sumo/docker/: build-image.sh  checkout.sh  entrypoint.sh  env.sh  get-component-version.sh  get-image-name.sh  get-repo-name.sh  get-system-version.sh  install.sh  token.txt
evc-sumo/src/: evc_connector.py  evc_sumo_bridge.py  sumo_connector.py
evc-sumo/test/: unit_test.py
hooks/: pre_build
scenario-runner/: .dockerignore  Dockerfile  README.md  install_carma_scenario_runner  my_scenario.py  requirements.txt
scenario-runner/examples/: my_scenario.xml  sensorlib_lidar_field_of_view.xml  trb_2024.xml
scenario-runner/scenarios/: sensorlib_lidar_field_of_view.py  trb_2024.py
scripts/: build.sh  install_dependencies.sh
(+531 files in other folders)
