<?xml version="1.0"?>

<!--  
 Copyright (C) 2018-2020 LEIDOS.

 Licensed under the Apache License, Version 2.0 (the "License"); you may not
 use this file except in compliance with the License. You may obtain a copy of
 the License at

 http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 License for the specific language governing permissions and limitations under
 the License.
-->

<package format="2">
  <name>carla_ackermann_control_wrapper</name>
  <version>3.2.0</version>
  <description>The wrapper for Carla Ackermann Controller</description>
  <maintainer email="fang.zhou@leidos.com">Fang Zhou</maintainer>
  <license>Apache 2.0 License</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>carma_utils</depend>
  <depend>cav_msgs</depend>
  <depend>cav_srvs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>autoware_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>carla_msgs</depend>
</package>
