<?xml version="1.0"?>

<!--  
 Copyright (C) 2018-2020 LEIDOS.

 Licensed under the Apache License, Version 2.0 (the "License"); you may not
 use this file except in compliance with the License. You may obtain a copy of
 the License at

 http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 License for the specific language governing permissions and limitations under
 the License.
-->

<package format="2">
  <name>carla_carma</name>
  <version>0.0.0</version>
  <description>The carma interface for carla simulator</description>
  <maintainer email="fang.zhou@leidos.com">Fang Zhou</maintainer>
  <license>Apache 2.0 License</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>carla_msgs</build_depend>
  <build_depend>autoware_msgs</build_depend>
  <build_depend>cav_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>carla_msgs</exec_depend>
  <exec_depend>autoware_msgs</exec_depend>
  <exec_depend>cav_msgs</exec_depend>
</package>
