<?xml version="1.0"?>
<package format="2">
  <name>carla_carma_bridge</name>
  <version>0.0.0</version>
  <description>The carla_carma_bridge package</description>

  <maintainer email="carma@dot.gov">carma</maintainer>
  <license>Apache 2.0 License</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>autoware_msgs</build_depend>
  <build_depend>carla_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>autoware_msgs</exec_depend>
  <exec_depend>carla_msgs</exec_depend>
  <exec_depend>cav_msgs</exec_depend>
  <exec_depend>cav_srvs</exec_depend>
  <exec_depend>health_monitor</exec_depend>

  <export>
  </export>
</package>
